tests/negative/optimizer/mod-zero.orng
fn main() -> Int {
    5 % 0
}